--- a/AlienShooter/Resource1.resx
+++ b/AlienShooter/Resource1.resx
@@ -121,6 +121,9 @@
   <data name="grass" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>res\grass.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="hex" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\hex.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="marine_full" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>res\marine_full.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
